--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer": "^1.11",
+        "jms/serializer-bundle": "^2.4",
         "nelmio/api-doc-bundle": "^3.2",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
