--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,5 @@ app.swagger_ui:
     path: /api/doc
     methods: GET
     defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
