--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,17 +17,39 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        main:
-            pattern: ^/
-            form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
+        login:
+                    pattern:  ^/api/login
+                    stateless: true
+                    anonymous: true
+                    form_login:
+                        check_path:               /api/login
+                        username_parameter:       username
+                        password_parameter:       password
+                        success_handler:          lexik_jwt_authentication.handler.authentication_success
+                        failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+                        require_previous_session: false
 
-            logout:       true
-            anonymous:    true
+        api:
+                    pattern:   ^/api
+                    stateless: true
+                    provider: fos_userbundle
+                    guard:
+                        authenticators:
+                            - lexik_jwt_authentication.jwt_token_authenticator
+
+        main:
+                    pattern: ^/
+                    form_login:
+                        provider: fos_userbundle
+                        csrf_token_generator: security.csrf.token_manager
+
+                    logout:       true
+                    anonymous:    true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
